parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    GT
    LT
    TRANSPOSE
    UNARY_MINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> if_else_statement
Rule 6     statement -> while_statement
Rule 7     statement -> for_statement
Rule 8     statement -> print_statement
Rule 9     statement -> break_statement
Rule 10    statement -> continue_statement
Rule 11    statement -> return_statement
Rule 12    statement -> curly_brackets_statement
Rule 13    assignment -> variable assignment_op arithmetic_expression ;
Rule 14    assignment -> ref_var assignment_op arithmetic_expression ;
Rule 15    assignment_op -> =
Rule 16    assignment_op -> ADDASSIGN
Rule 17    assignment_op -> SUBASSIGN
Rule 18    assignment_op -> MULASSIGN
Rule 19    assignment_op -> DIVASSIGN
Rule 20    if_else_statement -> IF ( relational_expression ) statement
Rule 21    if_else_statement -> IF ( relational_expression ) statement ELSE statement
Rule 22    if_else_statement -> IF ( error ) statement
Rule 23    if_else_statement -> IF ( error ) statement ELSE statement
Rule 24    while_statement -> WHILE ( relational_expression ) statement
Rule 25    while_statement -> WHILE ( error ) statement
Rule 26    for_statement -> FOR variable = range_expression statement
Rule 27    range_expression -> arithmetic_expression : arithmetic_expression
Rule 28    print_statement -> PRINT expr_list ;
Rule 29    print_statement -> PRINT error ;
Rule 30    break_statement -> BREAK ;
Rule 31    return_statement -> RETURN arithmetic_expression ;
Rule 32    continue_statement -> CONTINUE ;
Rule 33    curly_brackets_statement -> { statements }
Rule 34    const -> STRING
Rule 35    const -> FLOATNUM
Rule 36    const -> INTNUM
Rule 37    matrix -> variable
Rule 38    matrix -> minus_matrix
Rule 39    matrix -> matrix_transposed
Rule 40    minus_matrix -> - matrix
Rule 41    matrix_transposed -> matrix '
Rule 42    variable -> ID
Rule 43    ref_var -> variable [ expr_list ]
Rule 44    expr_list -> expr_list , arithmetic_expression
Rule 45    expr_list -> arithmetic_expression
Rule 46    relational_expression -> arithmetic_expression > arithmetic_expression
Rule 47    relational_expression -> arithmetic_expression GE arithmetic_expression
Rule 48    relational_expression -> arithmetic_expression < arithmetic_expression
Rule 49    relational_expression -> arithmetic_expression LE arithmetic_expression
Rule 50    relational_expression -> arithmetic_expression EQ arithmetic_expression
Rule 51    relational_expression -> arithmetic_expression NE arithmetic_expression
Rule 52    relational_expression -> ( relational_expression )
Rule 53    relational_expression -> arithmetic_expression
Rule 54    arithmetic_expression -> const
Rule 55    arithmetic_expression -> vector
Rule 56    arithmetic_expression -> variable
Rule 57    arithmetic_expression -> matrix
Rule 58    arithmetic_expression -> minus_matrix
Rule 59    arithmetic_expression -> matrix_function
Rule 60    arithmetic_expression -> matrix_operation
Rule 61    arithmetic_expression -> arithmetic_expression + arithmetic_expression
Rule 62    arithmetic_expression -> arithmetic_expression - arithmetic_expression
Rule 63    arithmetic_expression -> arithmetic_expression * arithmetic_expression
Rule 64    arithmetic_expression -> arithmetic_expression / arithmetic_expression
Rule 65    arithmetic_expression -> ( arithmetic_expression )
Rule 66    vector -> [ vector_row ]
Rule 67    vector_row -> vector_row ; expr_list
Rule 68    vector_row -> expr_list
Rule 69    matrix_function -> ZEROS ( const , const )
Rule 70    matrix_function -> ONES ( const , const )
Rule 71    matrix_function -> EYE ( const , const )
Rule 72    matrix_function -> ZEROS ( const )
Rule 73    matrix_function -> ONES ( const )
Rule 74    matrix_function -> EYE ( const )
Rule 75    matrix_operation -> matrix DOTADD matrix
Rule 76    matrix_operation -> matrix DOTSUB matrix
Rule 77    matrix_operation -> matrix DOTMUL matrix
Rule 78    matrix_operation -> matrix DOTDIV matrix

Terminals, with rules where they appear

'                    : 41
(                    : 20 21 22 23 24 25 52 65 69 70 71 72 73 74
)                    : 20 21 22 23 24 25 52 65 69 70 71 72 73 74
*                    : 63
+                    : 61
,                    : 44 69 70 71
-                    : 40 62
/                    : 64
:                    : 27
;                    : 13 14 28 29 30 31 32 67
<                    : 48
=                    : 15 26
>                    : 46
ADDASSIGN            : 16
BREAK                : 30
COMMENT              : 
CONTINUE             : 32
DIVASSIGN            : 19
DOTADD               : 75
DOTDIV               : 78
DOTMUL               : 77
DOTSUB               : 76
ELSE                 : 21 23
EQ                   : 50
EYE                  : 71 74
FLOATNUM             : 35
FOR                  : 26
GE                   : 47
GT                   : 
ID                   : 42
IF                   : 20 21 22 23
INTNUM               : 36
LE                   : 49
LT                   : 
MULASSIGN            : 18
NE                   : 51
ONES                 : 70 73
PRINT                : 28 29
RETURN               : 31
STRING               : 34
SUBASSIGN            : 17
TRANSPOSE            : 
UNARY_MINUS          : 
WHILE                : 24 25
ZEROS                : 69 72
[                    : 43 66
]                    : 43 66
error                : 22 23 25 29
{                    : 33
}                    : 33

Nonterminals, with rules where they appear

arithmetic_expression : 13 14 27 27 31 44 45 46 46 47 47 48 48 49 49 50 50 51 51 53 61 61 62 62 63 63 64 64 65
assignment           : 4
assignment_op        : 13 14
break_statement      : 9
const                : 54 69 69 70 70 71 71 72 73 74
continue_statement   : 10
curly_brackets_statement : 12
expr_list            : 28 43 44 67 68
for_statement        : 7
if_else_statement    : 5
matrix               : 40 41 57 75 75 76 76 77 77 78 78
matrix_function      : 59
matrix_operation     : 60
matrix_transposed    : 39
minus_matrix         : 38 58
print_statement      : 8
program              : 0
range_expression     : 26
ref_var              : 14
relational_expression : 20 21 24 52
return_statement     : 11
statement            : 2 3 20 21 21 22 23 23 24 25 26
statements           : 1 2 33
variable             : 13 26 37 43 56
vector               : 55
vector_row           : 66 67
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . if_else_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . print_statement
    (9) statement -> . break_statement
    (10) statement -> . continue_statement
    (11) statement -> . return_statement
    (12) statement -> . curly_brackets_statement
    (13) assignment -> . variable assignment_op arithmetic_expression ;
    (14) assignment -> . ref_var assignment_op arithmetic_expression ;
    (20) if_else_statement -> . IF ( relational_expression ) statement
    (21) if_else_statement -> . IF ( relational_expression ) statement ELSE statement
    (22) if_else_statement -> . IF ( error ) statement
    (23) if_else_statement -> . IF ( error ) statement ELSE statement
    (24) while_statement -> . WHILE ( relational_expression ) statement
    (25) while_statement -> . WHILE ( error ) statement
    (26) for_statement -> . FOR variable = range_expression statement
    (28) print_statement -> . PRINT expr_list ;
    (29) print_statement -> . PRINT error ;
    (30) break_statement -> . BREAK ;
    (32) continue_statement -> . CONTINUE ;
    (31) return_statement -> . RETURN arithmetic_expression ;
    (33) curly_brackets_statement -> . { statements }
    (42) variable -> . ID
    (43) ref_var -> . variable [ expr_list ]

    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_else_statement              shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    print_statement                shift and go to state 8
    break_statement                shift and go to state 9
    continue_statement             shift and go to state 10
    return_statement               shift and go to state 11
    curly_brackets_statement       shift and go to state 12
    variable                       shift and go to state 13
    ref_var                        shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . if_else_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . print_statement
    (9) statement -> . break_statement
    (10) statement -> . continue_statement
    (11) statement -> . return_statement
    (12) statement -> . curly_brackets_statement
    (13) assignment -> . variable assignment_op arithmetic_expression ;
    (14) assignment -> . ref_var assignment_op arithmetic_expression ;
    (20) if_else_statement -> . IF ( relational_expression ) statement
    (21) if_else_statement -> . IF ( relational_expression ) statement ELSE statement
    (22) if_else_statement -> . IF ( error ) statement
    (23) if_else_statement -> . IF ( error ) statement ELSE statement
    (24) while_statement -> . WHILE ( relational_expression ) statement
    (25) while_statement -> . WHILE ( error ) statement
    (26) for_statement -> . FOR variable = range_expression statement
    (28) print_statement -> . PRINT expr_list ;
    (29) print_statement -> . PRINT error ;
    (30) break_statement -> . BREAK ;
    (32) continue_statement -> . CONTINUE ;
    (31) return_statement -> . RETURN arithmetic_expression ;
    (33) curly_brackets_statement -> . { statements }
    (42) variable -> . ID
    (43) ref_var -> . variable [ expr_list ]

    $end            reduce using rule 1 (program -> statements .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    statement                      shift and go to state 24
    assignment                     shift and go to state 4
    if_else_statement              shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    print_statement                shift and go to state 8
    break_statement                shift and go to state 9
    continue_statement             shift and go to state 10
    return_statement               shift and go to state 11
    curly_brackets_statement       shift and go to state 12
    variable                       shift and go to state 13
    ref_var                        shift and go to state 14

state 3

    (3) statements -> statement .

    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    CONTINUE        reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    {               reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    CONTINUE        reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    {               reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)
    ELSE            reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> if_else_statement .

    IF              reduce using rule 5 (statement -> if_else_statement .)
    WHILE           reduce using rule 5 (statement -> if_else_statement .)
    FOR             reduce using rule 5 (statement -> if_else_statement .)
    PRINT           reduce using rule 5 (statement -> if_else_statement .)
    BREAK           reduce using rule 5 (statement -> if_else_statement .)
    CONTINUE        reduce using rule 5 (statement -> if_else_statement .)
    RETURN          reduce using rule 5 (statement -> if_else_statement .)
    {               reduce using rule 5 (statement -> if_else_statement .)
    ID              reduce using rule 5 (statement -> if_else_statement .)
    $end            reduce using rule 5 (statement -> if_else_statement .)
    }               reduce using rule 5 (statement -> if_else_statement .)
    ELSE            reduce using rule 5 (statement -> if_else_statement .)


state 6

    (6) statement -> while_statement .

    IF              reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    FOR             reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    BREAK           reduce using rule 6 (statement -> while_statement .)
    CONTINUE        reduce using rule 6 (statement -> while_statement .)
    RETURN          reduce using rule 6 (statement -> while_statement .)
    {               reduce using rule 6 (statement -> while_statement .)
    ID              reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    }               reduce using rule 6 (statement -> while_statement .)
    ELSE            reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> for_statement .

    IF              reduce using rule 7 (statement -> for_statement .)
    WHILE           reduce using rule 7 (statement -> for_statement .)
    FOR             reduce using rule 7 (statement -> for_statement .)
    PRINT           reduce using rule 7 (statement -> for_statement .)
    BREAK           reduce using rule 7 (statement -> for_statement .)
    CONTINUE        reduce using rule 7 (statement -> for_statement .)
    RETURN          reduce using rule 7 (statement -> for_statement .)
    {               reduce using rule 7 (statement -> for_statement .)
    ID              reduce using rule 7 (statement -> for_statement .)
    $end            reduce using rule 7 (statement -> for_statement .)
    }               reduce using rule 7 (statement -> for_statement .)
    ELSE            reduce using rule 7 (statement -> for_statement .)


state 8

    (8) statement -> print_statement .

    IF              reduce using rule 8 (statement -> print_statement .)
    WHILE           reduce using rule 8 (statement -> print_statement .)
    FOR             reduce using rule 8 (statement -> print_statement .)
    PRINT           reduce using rule 8 (statement -> print_statement .)
    BREAK           reduce using rule 8 (statement -> print_statement .)
    CONTINUE        reduce using rule 8 (statement -> print_statement .)
    RETURN          reduce using rule 8 (statement -> print_statement .)
    {               reduce using rule 8 (statement -> print_statement .)
    ID              reduce using rule 8 (statement -> print_statement .)
    $end            reduce using rule 8 (statement -> print_statement .)
    }               reduce using rule 8 (statement -> print_statement .)
    ELSE            reduce using rule 8 (statement -> print_statement .)


state 9

    (9) statement -> break_statement .

    IF              reduce using rule 9 (statement -> break_statement .)
    WHILE           reduce using rule 9 (statement -> break_statement .)
    FOR             reduce using rule 9 (statement -> break_statement .)
    PRINT           reduce using rule 9 (statement -> break_statement .)
    BREAK           reduce using rule 9 (statement -> break_statement .)
    CONTINUE        reduce using rule 9 (statement -> break_statement .)
    RETURN          reduce using rule 9 (statement -> break_statement .)
    {               reduce using rule 9 (statement -> break_statement .)
    ID              reduce using rule 9 (statement -> break_statement .)
    $end            reduce using rule 9 (statement -> break_statement .)
    }               reduce using rule 9 (statement -> break_statement .)
    ELSE            reduce using rule 9 (statement -> break_statement .)


state 10

    (10) statement -> continue_statement .

    IF              reduce using rule 10 (statement -> continue_statement .)
    WHILE           reduce using rule 10 (statement -> continue_statement .)
    FOR             reduce using rule 10 (statement -> continue_statement .)
    PRINT           reduce using rule 10 (statement -> continue_statement .)
    BREAK           reduce using rule 10 (statement -> continue_statement .)
    CONTINUE        reduce using rule 10 (statement -> continue_statement .)
    RETURN          reduce using rule 10 (statement -> continue_statement .)
    {               reduce using rule 10 (statement -> continue_statement .)
    ID              reduce using rule 10 (statement -> continue_statement .)
    $end            reduce using rule 10 (statement -> continue_statement .)
    }               reduce using rule 10 (statement -> continue_statement .)
    ELSE            reduce using rule 10 (statement -> continue_statement .)


state 11

    (11) statement -> return_statement .

    IF              reduce using rule 11 (statement -> return_statement .)
    WHILE           reduce using rule 11 (statement -> return_statement .)
    FOR             reduce using rule 11 (statement -> return_statement .)
    PRINT           reduce using rule 11 (statement -> return_statement .)
    BREAK           reduce using rule 11 (statement -> return_statement .)
    CONTINUE        reduce using rule 11 (statement -> return_statement .)
    RETURN          reduce using rule 11 (statement -> return_statement .)
    {               reduce using rule 11 (statement -> return_statement .)
    ID              reduce using rule 11 (statement -> return_statement .)
    $end            reduce using rule 11 (statement -> return_statement .)
    }               reduce using rule 11 (statement -> return_statement .)
    ELSE            reduce using rule 11 (statement -> return_statement .)


state 12

    (12) statement -> curly_brackets_statement .

    IF              reduce using rule 12 (statement -> curly_brackets_statement .)
    WHILE           reduce using rule 12 (statement -> curly_brackets_statement .)
    FOR             reduce using rule 12 (statement -> curly_brackets_statement .)
    PRINT           reduce using rule 12 (statement -> curly_brackets_statement .)
    BREAK           reduce using rule 12 (statement -> curly_brackets_statement .)
    CONTINUE        reduce using rule 12 (statement -> curly_brackets_statement .)
    RETURN          reduce using rule 12 (statement -> curly_brackets_statement .)
    {               reduce using rule 12 (statement -> curly_brackets_statement .)
    ID              reduce using rule 12 (statement -> curly_brackets_statement .)
    $end            reduce using rule 12 (statement -> curly_brackets_statement .)
    }               reduce using rule 12 (statement -> curly_brackets_statement .)
    ELSE            reduce using rule 12 (statement -> curly_brackets_statement .)


state 13

    (13) assignment -> variable . assignment_op arithmetic_expression ;
    (43) ref_var -> variable . [ expr_list ]
    (15) assignment_op -> . =
    (16) assignment_op -> . ADDASSIGN
    (17) assignment_op -> . SUBASSIGN
    (18) assignment_op -> . MULASSIGN
    (19) assignment_op -> . DIVASSIGN

    [               shift and go to state 26
    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_op                  shift and go to state 25

state 14

    (14) assignment -> ref_var . assignment_op arithmetic_expression ;
    (15) assignment_op -> . =
    (16) assignment_op -> . ADDASSIGN
    (17) assignment_op -> . SUBASSIGN
    (18) assignment_op -> . MULASSIGN
    (19) assignment_op -> . DIVASSIGN

    =               shift and go to state 27
    ADDASSIGN       shift and go to state 28
    SUBASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30
    DIVASSIGN       shift and go to state 31

    assignment_op                  shift and go to state 32

state 15

    (20) if_else_statement -> IF . ( relational_expression ) statement
    (21) if_else_statement -> IF . ( relational_expression ) statement ELSE statement
    (22) if_else_statement -> IF . ( error ) statement
    (23) if_else_statement -> IF . ( error ) statement ELSE statement

    (               shift and go to state 33


state 16

    (24) while_statement -> WHILE . ( relational_expression ) statement
    (25) while_statement -> WHILE . ( error ) statement

    (               shift and go to state 34


state 17

    (26) for_statement -> FOR . variable = range_expression statement
    (42) variable -> . ID

    ID              shift and go to state 23

    variable                       shift and go to state 35

state 18

    (28) print_statement -> PRINT . expr_list ;
    (29) print_statement -> PRINT . error ;
    (44) expr_list -> . expr_list , arithmetic_expression
    (45) expr_list -> . arithmetic_expression
    (54) arithmetic_expression -> . const
    (55) arithmetic_expression -> . vector
    (56) arithmetic_expression -> . variable
    (57) arithmetic_expression -> . matrix
    (58) arithmetic_expression -> . minus_matrix
    (59) arithmetic_expression -> . matrix_function
    (60) arithmetic_expression -> . matrix_operation
    (61) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (62) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (63) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (64) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (65) arithmetic_expression -> . ( arithmetic_expression )
    (34) const -> . STRING
    (35) const -> . FLOATNUM
    (36) const -> . INTNUM
    (66) vector -> . [ vector_row ]
    (42) variable -> . ID
    (37) matrix -> . variable
    (38) matrix -> . minus_matrix
    (39) matrix -> . matrix_transposed
    (40) minus_matrix -> . - matrix
    (69) matrix_function -> . ZEROS ( const , const )
    (70) matrix_function -> . ONES ( const , const )
    (71) matrix_function -> . EYE ( const , const )
    (72) matrix_function -> . ZEROS ( const )
    (73) matrix_function -> . ONES ( const )
    (74) matrix_function -> . EYE ( const )
    (75) matrix_operation -> . matrix DOTADD matrix
    (76) matrix_operation -> . matrix DOTSUB matrix
    (77) matrix_operation -> . matrix DOTMUL matrix
    (78) matrix_operation -> . matrix DOTDIV matrix
    (41) matrix_transposed -> . matrix '

    error           shift and go to state 37
    (               shift and go to state 47
    STRING          shift and go to state 48
    FLOATNUM        shift and go to state 49
    INTNUM          shift and go to state 50
    [               shift and go to state 51
    ID              shift and go to state 23
    -               shift and go to state 46
    ZEROS           shift and go to state 53
    ONES            shift and go to state 54
    EYE             shift and go to state 55

    expr_list                      shift and go to state 36
    arithmetic_expression          shift and go to state 38
    const                          shift and go to state 39
    vector                         shift and go to state 40
    variable                       shift and go to state 41
    matrix                         shift and go to state 42
    minus_matrix                   shift and go to state 43
    matrix_function                shift and go to state 44
    matrix_operation               shift and go to state 45
    matrix_transposed              shift and go to state 52

state 19

    (30) break_statement -> BREAK . ;

    ;               shift and go to state 56


state 20

    (32) continue_statement -> CONTINUE . ;

    ;               shift and go to state 57


state 21

    (31) return_statement -> RETURN . arithmetic_expression ;
    (54) arithmetic_expression -> . const
    (55) arithmetic_expression -> . vector
    (56) arithmetic_expression -> . variable
    (57) arithmetic_expression -> . matrix
    (58) arithmetic_expression -> . minus_matrix
    (59) arithmetic_expression -> . matrix_function
    (60) arithmetic_expression -> . matrix_operation
    (61) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (62) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (63) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (64) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (65) arithmetic_expression -> . ( arithmetic_expression )
    (34) const -> . STRING
    (35) const -> . FLOATNUM
    (36) const -> . INTNUM
    (66) vector -> . [ vector_row ]
    (42) variable -> . ID
    (37) matrix -> . variable
    (38) matrix -> . minus_matrix
    (39) matrix -> . matrix_transposed
    (40) minus_matrix -> . - matrix
    (69) matrix_function -> . ZEROS ( const , const )
    (70) matrix_function -> . ONES ( const , const )
    (71) matrix_function -> . EYE ( const , const )
    (72) matrix_function -> . ZEROS ( const )
    (73) matrix_function -> . ONES ( const )
    (74) matrix_function -> . EYE ( const )
    (75) matrix_operation -> . matrix DOTADD matrix
    (76) matrix_operation -> . matrix DOTSUB matrix
    (77) matrix_operation -> . matrix DOTMUL matrix
    (78) matrix_operation -> . matrix DOTDIV matrix
    (41) matrix_transposed -> . matrix '

    (               shift and go to state 47
    STRING          shift and go to state 48
    FLOATNUM        shift and go to state 49
    INTNUM          shift and go to state 50
    [               shift and go to state 51
    ID              shift and go to state 23
    -               shift and go to state 46
    ZEROS           shift and go to state 53
    ONES            shift and go to state 54
    EYE             shift and go to state 55

    arithmetic_expression          shift and go to state 58
    const                          shift and go to state 39
    vector                         shift and go to state 40
    variable                       shift and go to state 41
    matrix                         shift and go to state 42
    minus_matrix                   shift and go to state 43
    matrix_function                shift and go to state 44
    matrix_operation               shift and go to state 45
    matrix_transposed              shift and go to state 52

state 22

    (33) curly_brackets_statement -> { . statements }
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . if_else_statement
    (6) statement -> . while_statement
    (7) statement -> . for_statement
    (8) statement -> . print_statement
    (9) statement -> . break_statement
    (10) statement -> . continue_statement
    (11) statement -> . return_statement
    (12) statement -> . curly_brackets_statement
    (13) assignment -> . variable assignment_op arithmetic_expression ;
    (14) assignment -> . ref_var assignment_op arithmetic_expression ;
    (20) if_else_statement -> . IF ( relational_expression ) statement
    (21) if_else_statement -> . IF ( relational_expression ) statement ELSE statement
    (22) if_else_statement -> . IF ( error ) statement
    (23) if_else_statement -> . IF ( error ) statement ELSE statement
    (24) while_statement -> . WHILE ( relational_expression ) statement
    (25) while_statement -> . WHILE ( error ) statement
    (26) for_statement -> . FOR variable = range_expression statement
    (28) print_statement -> . PRINT expr_list ;
    (29) print_statement -> . PRINT error ;
    (30) break_statement -> . BREAK ;
    (32) continue_statement -> . CONTINUE ;
    (31) return_statement -> . RETURN arithmetic_expression ;
    (33) curly_brackets_statement -> . { statements }
    (42) variable -> . ID
    (43) ref_var -> . variable [ expr_list ]

    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    PRINT           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    {               shift and go to state 22
    ID              shift and go to state 23

    statements                     shift and go to state 59
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_else_statement              shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    print_statement                shift and go to state 8
    break_statement                shift and go to state 9
    continue_statement             shift and go to state 10
    return_statement               shift and go to state 11
    curly_brackets_statement       shift and go to state 12
    variable                       shift and go to state 13
    ref_var                        shift and go to state 14

state 23

    (42) variable -> ID .

    [               reduce using rule 42 (variable -> ID .)
    =               reduce using rule 42 (variable -> ID .)
    ADDASSIGN       reduce using rule 42 (variable -> ID .)
    SUBASSIGN       reduce using rule 42 (variable -> ID .)
    MULASSIGN       reduce using rule 42 (variable -> ID .)
    DIVASSIGN       reduce using rule 42 (variable -> ID .)
    +               reduce using rule 42 (variable -> ID .)
    -               reduce using rule 42 (variable -> ID .)
    *               reduce using rule 42 (variable -> ID .)
    /               reduce using rule 42 (variable -> ID .)
    ;               reduce using rule 42 (variable -> ID .)
    ,               reduce using rule 42 (variable -> ID .)
    DOTADD          reduce using rule 42 (variable -> ID .)
    DOTSUB          reduce using rule 42 (variable -> ID .)
    DOTMUL          reduce using rule 42 (variable -> ID .)
    DOTDIV          reduce using rule 42 (variable -> ID .)
    '               reduce using rule 42 (variable -> ID .)
    ]               reduce using rule 42 (variable -> ID .)
    >               reduce using rule 42 (variable -> ID .)
    GE              reduce using rule 42 (variable -> ID .)
    <               reduce using rule 42 (variable -> ID .)
    LE              reduce using rule 42 (variable -> ID .)
    EQ              reduce using rule 42 (variable -> ID .)
    NE              reduce using rule 42 (variable -> ID .)
    )               reduce using rule 42 (variable -> ID .)
    :               reduce using rule 42 (variable -> ID .)
    IF              reduce using rule 42 (variable -> ID .)
    WHILE           reduce using rule 42 (variable -> ID .)
    FOR             reduce using rule 42 (variable -> ID .)
    PRINT           reduce using rule 42 (variable -> ID .)
    BREAK           reduce using rule 42 (variable -> ID .)
    CONTINUE        reduce using rule 42 (variable -> ID .)
    RETURN          reduce using rule 42 (variable -> ID .)
    {               reduce using rule 42 (variable -> ID .)
    ID              reduce using rule 42 (variable -> ID .)


state 24

    (2) statements -> statements statement .

    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    CONTINUE        reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    {               reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    }               reduce using rule 2 (statements -> statements statement .)


state 25

    (13) assignment -> variable assignment_op . arithmetic_expression ;
    (54) arithmetic_expression -> . const
    (55) arithmetic_expression -> . vector
    (56) arithmetic_expression -> . variable
    (57) arithmetic_expression -> . matrix
    (58) arithmetic_expression -> . minus_matrix
    (59) arithmetic_expression -> . matrix_function
    (60) arithmetic_expression -> . matrix_operation
    (61) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (62) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (63) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (64) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (65) arithmetic_expression -> . ( arithmetic_expression )
    (34) const -> . STRING
    (35) const -> . FLOATNUM
    (36) const -> . INTNUM
    (66) vector -> . [ vector_row ]
    (42) variable -> . ID
    (37) matrix -> . variable
    (38) matrix -> . minus_matrix
    (39) matrix -> . matrix_transposed
    (40) minus_matrix -> . - matrix
    (69) matrix_function -> . ZEROS ( const , const )
    (70) matrix_function -> . ONES ( const , const )
    (71) matrix_function -> . EYE ( const , const )
    (72) matrix_function -> . ZEROS ( const )
    (73) matrix_function -> . ONES ( const )
    (74) matrix_function -> . EYE ( const )
    (75) matrix_operation -> . matrix DOTADD matrix
    (76) matrix_operation -> . matrix DOTSUB matrix
    (77) matrix_operation -> . matrix DOTMUL matrix
    (78) matrix_operation -> . matrix DOTDIV matrix
    (41) matrix_transposed -> . matrix '

    (               shift and go to state 47
    STRING          shift and go to state 48
    FLOATNUM        shift and go to state 49
    INTNUM          shift and go to state 50
    [               shift and go to state 51
    ID              shift and go to state 23
    -               shift and go to state 46
    ZEROS           shift and go to state 53
    ONES            shift and go to state 54
    EYE             shift and go to state 55

    variable                       shift and go to state 41
    arithmetic_expression          shift and go to state 60
    const                          shift and go to state 39
    vector                         shift and go to state 40
    matrix                         shift and go to state 42
    minus_matrix                   shift and go to state 43
    matrix_function                shift and go to state 44
    matrix_operation               shift and go to state 45
    matrix_transposed              shift and go to state 52

state 26

    (43) ref_var -> variable [ . expr_list ]
    (44) expr_list -> . expr_list , arithmetic_expression
    (45) expr_list -> . arithmetic_expression
    (54) arithmetic_expression -> . const
    (55) arithmetic_expression -> . vector
    (56) arithmetic_expression -> . variable
    (57) arithmetic_expression -> . matrix
    (58) arithmetic_expression -> . minus_matrix
    (59) arithmetic_expression -> . matrix_function
    (60) arithmetic_expression -> . matrix_operation
    (61) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (62) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (63) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (64) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (65) arithmetic_expression -> . ( arithmetic_expression )
    (34) const -> . STRING
    (35) const -> . FLOATNUM
    (36) const -> . INTNUM
    (66) vector -> . [ vector_row ]
    (42) variable -> . ID
